fix: exhaustive coverage for EventController and SonarQube code cleanup